--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
 <!-- logo font -->
 <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
 
+<!-- 404 font-->
+<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+
 
 
 
